--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">santa manito</string>
+
+    <string name="santaperiodpicker_period">%d일 후</string>
+
 </resources>
