--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,12 @@
     <string name="app_name">santa manito</string>
 
     <string name="santaperiodpicker_period">%d일 후</string>
+    <string name="sign_in_background_welcome">안녕!\n산타 마니또에 온 것을 환영해:)</string>
+    <string name="sign_in_title_1">기본 설정</string>
+
+    <string name="santaindicator_1">1</string>
+    <string name="signin_title_name">내 이름</string>
+    <string name="signin_edittext_hint">산타야! 너의 이름이 궁금해</string>
+    <string name="signin_button_next">다음</string>
 
 </resources>
