--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,11 @@
     <string name="condition_1">(필수) 이용 약관 동의</string>
     <string name="condition_2">(필수) 개인정보 수집 및 이용 동의</string>
     <string name="condition_background_text">%s 산타야 반가워!\n곧 친구들의 산타가 될 수 있어</string>
+
+    <string name="main_make_room">방 만들기</string>
+    <string name="main_join_room">방 입장하기</string>
+    <string name="main_make_room_description">새로운 산타\n마니또 시작하기</string>
+    <string name="main_join_room_description">산타 마니또\n입장 코드 입력하기</string>
+    <string name="main_my_manitto_history">나의 산타 마니또</string>
+    <string name="main_no_manitto_notice">아직 진행중인 마니또가 없어요!</string>
 </resources>
