--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="main_no_manitto_notice">아직 진행중인 마니또가 없어요!</string>
 
     <string name="mymanittoviewholder_manitto_info">%s의 산타</string>
+    <string name="mymanittoviewholder_manitto_daydiff">%d일째</string>
 </resources>
