feat: Get Manitto info of joined room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,6 @@
     <string name="main_my_manitto_history">나의 산타 마니또</string>
     <string name="main_no_manitto_notice">아직 진행중인 마니또가 없어요!</string>
 
-    <string name="mymanittoviewholder_manitto_info">%s의 산타</string>
-    <string name="mymanittoviewholder_manitto_daydiff">%d일째</string>
+    <string name="joinedroom_manitto_info">%s의 산타</string>
+    <string name="joinedroom_daydiff">%d일째</string>
 </resources>
