--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
 
     <string name="joinedroom_manitto_info">%s의 산타</string>
     <string name="joinedroom_daydiff">%d일째</string>
+
+    <string name="santaloading_data_not_available">데이터를 불러오지 못했습니다.</string>
 </resources>
