feat: Set state of joined room by data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
 
     <string name="joinedroom_manitto_info">%s의 산타</string>
     <string name="joinedroom_daydiff">%d일째</string>
+    <string name="joinedroom_state_done">결과 발표 완료</string>
+    <string name="joinedroom_state_matching">매칭 대기 중</string>
 
     <string name="santaloading_data_not_available">데이터를 불러오지 못했습니다.</string>
 </resources>
