--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,14 @@
     <string name="joinedroom_state_matching">매칭 대기 중</string>
 
     <string name="santaloading_data_not_available">데이터를 불러오지 못했습니다.</string>
+
+    <string name="createroom_background_title">방 만들기</string>
+    <string name="createroom_background_description">친구들이 방을 잘 찾아올 수 있도록\n방 이름과 종료일을 지정해보자!</string>
+    <string name="createroom_room_name">방 이름</string>
+    <string name="createroom_roomname_hint">방 이름을 지어줘!</string>
+    <string name="createroom_room_expiration">산타 마니또 공개일 설정</string>
+    <string name="createroom_expiration_description">최소 3일 부터 최대 14일까지 기간을 설정할 수 있어~</string>
+    <string name="textview_createroom_expiration_time">산타 마니또 공개 시간</string>
+    <string name="createroom_preview_end">산타 마니또 결과가 공개될거야!</string>
+    <string name="createroom_button_next">다음</string>
 </resources>
