--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,9 @@
     <string name="textview_createroom_expiration_time">산타 마니또 공개 시간</string>
     <string name="createroom_preview_end">산타 마니또 결과가 공개될거야!</string>
     <string name="createroom_button_next">다음</string>
+    <string name="createroom_preview_start">%d일 후인</string>
+    <string name="createroom_preview">%d/%02d/%02d %s %02d : %02d에</string>
+    <string name="createroom_pm">오후</string>
+    <string name="createroom_am">오전</string>
+    <string name="createroom_expiration_time">%02d : %02d</string>
 </resources>
