--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,11 @@
     <string name="createroom_am">오전</string>
     <string name="createroom_expiration_time">%02d : %02d</string>
     <string name="createroom_dialog_expiration_time_setting">공개 시간 설정</string>
+
+    <string name="createmission_background_title">미션 만들기</string>
+    <string name="createmission_background_description">흥미딘딘한 산타 마니또를 위해\n미션을 추가해볼까?</string>
+    <string name="createmission_description_in_cardview">미션을 추가하면 마니또와 미션을 함께 매칭할 수 있고, 스킵하면 미션 없이 마니또만 매칭될거야!</string>
+    <string name="createmission_done_bottom_button">미션 만들기 완료</string>
+    <string name="createmission_skip_bottom_button">SKIP</string>
+    <string name="createmission_mission_hint">미션을 입력해줘!</string>
 </resources>
