--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="createmission_mission_hint">미션을 입력해줘!</string>
     <string name="createmission_dialog_skip_has_mission">아직 작성중인 미션이 있어!\n미션을 삭제하고 SKIP 하는 거 맞지?</string>
     <string name="createmission_dialog_no_mission">아직 작성한 미션이 없어!\n미션 설정을 안하는 거 맞지?</string>
+    <string name="createconfirm_expiration_suffix">에 결과 공개!</string>
+    <string name="createconfirm_no_mission">추가된 미션이 없어요!</string>
 </resources>
