--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="waitingroom_notice_owner">방장 산타는 참여자가 다 모이면 하단 버튼을 눌러줘:)</string>
     <string name="waitingroom_bottombutton">마니또 랜덤 매칭하기</string>
     <string name="manittoroom_description">오늘부터 %d일 후인 %d월 %d일\n%s %02d:%02d까지 진행되는 마니또</string>
+    <string name="waitingroom_snackbar_invitation_code">참여 코드가 복사되었습니다</string>
 </resources>
