--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,6 @@
     <string name="finish_bottom_button">전체 결과 보기</string>
     <string name="finish_manitto_title">%d일동안의 산타 마니또 종료!\n나의 산타 마니또는 누구일까?</string>
     <string name="finish_title">나를 챙겨준 산타는?</string>
+    <string name="result_bottom">홈으로 가기</string>
+    <string name="result_title">총 %d명</string>
 </resources>
