fix: Day diff round

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,9 @@
     <string name="waitingroom_notice_admin">방장 산타는 참여자가 다 모이면 하단 버튼을 눌러줘:)</string>
     <string name="waitingroom_notice_participant">참여자 산타는 방장 산타가 매칭하기를 누를 때까지 기다려줘:)</string>
     <string name="waitingroom_bottombutton">마니또 랜덤 매칭하기</string>
-    <string name="manittoroom_description">오늘부터 %d일 후인 %d월 %d일\n%s %02d:%02d까지 진행되는 마니또</string>
+    <string name="manittoroom_description_today_prefix">바로 오늘, </string>
+    <string name="manittoroom_description_not_today_prefix">오늘부터 %d일 후인,</string>
+    <string name="manittoroom_description_suffix">%d월 %d일\n%s %02d:%02d까지 진행되는 마니또</string>
     <string name="waitingroom_snackbar_invitation_code">참여 코드가 복사되었습니다</string>
 
     <string name="matching_text">산타 마니또 매칭중\n잠시만 기다려줘:)</string>
