refactor: Merge ResultFragment with FinishFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="matched_mission_title">미션은</string>
     <string name="matched_manitto_title">%s 산타의 마니또는</string>
     <string name="matched_no_mission">미션이 없습니다</string>
+    <string name="matched_bottom_button_delete">나의 산타 마니또에서 삭제하기</string>
 
     <string name="finish_bottom_button">전체 결과 보기</string>
     <string name="finish_manitto_title">%d일동안의 산타 마니또 종료!\n나의 산타 마니또는 누구일까?</string>
