--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="main_my_manitto_history">나의 산타 마니또</string>
     <string name="main_no_manitto_notice">아직 진행중인 마니또가 없어요!</string>
 
+    <string name="joinedroom_exit_room">방 나가기</string>
     <string name="joinedroom_manitto_info">%s의 산타</string>
     <string name="joinedroom_daydiff">%d일째</string>
     <string name="joinedroom_state_done">결과 발표 완료</string>
