--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,8 @@
 
     <string name="exit_dialog_host">방장이 나가면 팀원들도\n방을 이용할 수 없어!</string>
     <string name="exit_dialog_guest">%s\n이 방을 나가는 거 맞지?</string>
+
+    <string name="setting_1_edit_name">닉네임 수정</string>
+    <string name="setting_2_tos">이용약관 동의</string>
+    <string name="setting_3_privacy_policy">개인정보 수집 및 이용 동의</string>
 </resources>
