--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,7 +111,7 @@
     <string name="setting_2_tos">이용약관 동의</string>
     <string name="setting_3_privacy_policy">개인정보 수집 및 이용 동의</string>
 
-    <string name="update_dialog_content">원활한 산타마니또를 위해 업데이트를 해야해!</string>
+    <string name="update_dialog_content">원활한 산타마니또를 위해\n업데이트를 해야해!</string>
     <string name="update_dialog_exit">마니또 종료</string>
     <string name="update_dialog_update">업데이트</string>
 </resources>
