--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,14 +58,14 @@
     <string name="createmission_description_in_cardview">미션 한 개에 마니또 한명이 매칭돼\n미션은 최대 36자까지 입력할 수 있어!</string>
     <string name="createmission_done_bottom_button">미션 만들기 완료</string>
     <string name="createmission_skip_bottom_button">SKIP</string>
-    <string name="createmission_mission_hint">미션을 입력해줘!</string>
+    <string name="createmission_mission_hint">미션을 입력하고 \'+\' 버튼을 눌러줘!</string>
     <string name="createmission_dialog_skip_has_mission">아직 작성중인 미션이 있어!\n미션을 삭제하고 SKIP 하는 거 맞지?</string>
     <string name="createmission_dialog_no_mission">아직 작성한 미션이 없어!\n미션 설정을 안하는 거 맞지?</string>
 
     <string name="createconfirm_expiration_suffix"> 결과 공개!</string>
     <string name="createconfirm_no_mission">추가된 미션이 없어요!</string>
     <string name="createconfirm_create_room">방 만들기</string>
-    <string name="createconfirm_done_dialog">참여코드 생성 완료!</string>
+    <string name="createconfirm_done_dialog">초대 코드를 복사해서 친구들에게 보내줘!</string>
 
     <string name="joinroom_background_title">방 입장하기</string>
     <string name="joinroom_background_description">코드를 입력하면 방으로 이동할거야!\n산타 마니또를 찾아 떠나볼까?</string>
@@ -75,7 +75,7 @@
     <string name="joinroom_dialog_wrong_invitation_code">참여가 불가능한 방이야!</string>
 
     <string name="waitingroom_cardview_title">참여자</string>
-    <string name="waitingroom_copy_invitation_code">참여 코드 복사</string>
+    <string name="waitingroom_copy_invitation_code">초대 코드 복사</string>
     <string name="waitingroom_notice_admin">방장 산타는 참여자가 다 모이면 하단 버튼을 눌러줘:)</string>
     <string name="waitingroom_notice_participant">참여자 산타는 방장 산타가 매칭하기를 누를 때까지 기다려줘:)</string>
     <string name="waitingroom_bottombutton">마니또 랜덤 매칭하기</string>
