[FIX/#117] 마니또 결과 화면 초기값 재설정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="dialog_cancel">취소</string>
 
     <string name="button_next">다음</string>
-    <string name="button_change">변경</string>
-
+    <string name="button_change">변경하기</string>
+ㅌ
     <string name="pm">오후</string>
     <string name="am">오전</string>
 
