[FEAT/#124] mock, prod에 따라 앱 아이콘, 라벨 분기처리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">santa manito</string>
+    <string name="dev_app_name">rudolf manito</string>
 
     <string name="dialog_confirm">확인</string>
     <string name="dialog_cancel">취소</string>
