--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">santa manito</string>
-    <string name="dev_app_name">rudolf manito</string>
+    <string name="app_name">santa manitto</string>
+    <string name="dev_app_name">rudolf manitto</string>
 
     <string name="dialog_confirm">확인</string>
     <string name="dialog_cancel">취소</string>
