--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,8 +72,8 @@
     <string name="joinroom_background_description">코드를 입력하고 초대된 방으로\n산타 마니또를 찾아 떠나볼까?</string>
     <string name="joinroom_participation_code_hint">초대 코드 입력 시, 공백을 조심해줘!</string>
     <string name="joinroom_dialog_duplicated_member">이미 참여 중인 방이야!</string>
-    <string name="joinroom_dialog_already_matched">참여가 불가능한 방이야!</string>
-    <string name="joinroom_dialog_wrong_invitation_code">참여가 불가능한 방이야!</string>
+    <string name="joinroom_dialog_already_matched">이미 입장한 방이야!</string>
+    <string name="joinroom_dialog_wrong_invitation_code">참여가 불가능한 방이야!\n혹시 초대 코드에 공백이 있는지 확인해줘!</string>
 
     <string name="waitingroom_cardview_title">참여자</string>
     <string name="waitingroom_copy_invitation_code">초대 코드 복사</string>
