[QA/#130] 방 입장하기 카드 문구 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="main_make_room">방 만들기</string>
     <string name="main_join_room">방 입장하기</string>
     <string name="main_make_room_description">새로운 산타\n마니또 시작하기</string>
-    <string name="main_join_room_description">산타 마니또\n초대 코드 입력하기</string>
+    <string name="main_join_room_description">초대 코드 입력하고\n마니또 방 들어가기</string>
     <string name="main_my_manitto_history">진행중인 산타 마니또</string>
     <string name="main_no_manitto_notice">친구들과 산타 마니또 게임을 시작해봐!</string>
 
