--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,14 @@
 
     <string name="button_next">다음</string>
     <string name="button_change">변경하기</string>
-ㅌ
+    ㅌ
     <string name="pm">오후</string>
     <string name="am">오전</string>
 
     <string name="main_back_pressed">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
 
     <string name="santaperiodpicker_period">%d일 후</string>
-    <string name="entername_background_welcome">이용약관에 동의하면\n산타 마니또 게임을 할 수 있어!</string>
+    <string name="entername_background_welcome">안녕!\n산타 마니또에 온 것을 환영해:)</string>
     <string name="entername_title">기본 설정</string>
     <string name="entername_title_name">내 이름</string>
     <string name="entername_edittext_hint">산타야! 너의 이름이 궁금해</string>
@@ -23,7 +23,7 @@
     <string name="condition_all_agree">전체 동의</string>
     <string name="condition_1">(필수) 이용 약관 동의</string>
     <string name="condition_2">(필수) 개인정보 수집 및 이용 동의</string>
-    <string name="condition_background_text">%s 산타야 반가워!\n곧 친구들의 산타가 될 수 있어</string>
+    <string name="condition_background_text">이용약관에 동의하면\n산타 마니또 게임을 할 수 있어!</string>
 
     <string name="main_make_room">방 만들기</string>
     <string name="main_join_room">방 입장하기</string>
