--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,11 @@
     <string name="main_back_pressed">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
 
     <string name="santaperiodpicker_period">%d일 후</string>
-    <string name="entername_background_welcome">안녕!\n산타 마니또에 온 것을 환영해:)</string>
-    <string name="entername_title">기본 설정</string>
-    <string name="entername_title_name">내 이름</string>
-    <string name="entername_edittext_hint">산타야! 너의 이름이 궁금해</string>
+    <string name="entername_background_welcome">반가워, 이제부터\n산타 마니또에서 재미있게 놀자!</string>
+    <string name="entername_title">이름 설정</string>
+    <string name="entername_title_name">내 이름 (최대 10자)</string>
+    <string name="entername_edittext_hint">마니또가 부를 비밀스러운 이름을 지어줘!</string>
+    <string name="entername_button_text">이름 짓기 완료</string>
 
     <string name="condition_title">이용약관 동의</string>
     <string name="condition_all_agree">전체 동의</string>
