[FEAT] 약관 화면 문구 수정 및 UI 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="condition_all_agree">전체 동의</string>
     <string name="condition_1">(필수) 이용 약관 동의</string>
     <string name="condition_2">(필수) 개인정보 수집 및 이용 동의</string>
-    <string name="condition_background_text">이용약관에 동의하면\n산타 마니또 게임을 할 수 있어!</string>
+    <string name="condition_background_text">필수이용약관에 동의하면 친구들과\n산타 마니또를 할 수 있어!</string>
 
     <string name="main_make_room">방 만들기</string>
     <string name="main_join_room">방 입장하기</string>
