--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,13 +42,13 @@
 
     <string name="santaloading_data_not_available">데이터를 불러오지 못했습니다.</string>
 
-    <string name="createroom_background_title">방 만들기</string>
-    <string name="createroom_background_description">친구들이 방을 잘 찾아올 수 있도록\n초대 코드 알려주는 것 잊지 말자~</string>
-    <string name="createroom_room_name">방 이름</string>
-    <string name="createroom_roomname_hint">최대 %d자까지 설정할 수 있어! </string>
-    <string name="createroom_room_expiration">마니또 공개 예정일</string>
+    <string name="createroom_background_title">방 정보 설정</string>
+    <string name="createroom_background_description">언제까지 마니또 게임하게 할 거야\n내 마니또를 봐 산타 기다리잖아</string>
+    <string name="createroom_room_name">방이름 (최대 17자)</string>
+    <string name="createroom_roomname_hint">재미있는 방 이름을 지어보자!</string>
+    <string name="createroom_room_expiration">마니또 공개일</string>
     <string name="createroom_expiration_description" formatted="false">최소 %d일부터 최대 %d일까지 기간을 설정할 수 있어~</string>
-    <string name="textview_createroom_expiration_time">산타 마니또 종료 시간</string>
+    <string name="textview_createroom_expiration_time">마니또 공개 시간</string>
     <string name="createroom_preview_end">산타 마니또 결과가 공개될거야!</string>
     <string name="createroom_preview_start">%d일 후인</string>
     <string name="createroom_preview" formatted="false">%d/%02d/%02d %s %02d : %02d</string>
