--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
 
     <string name="joinedroom_exit_room">방 나가기</string>
     <string name="joinedroom_manitto_info">%s의 산타</string>
-    <string name="joinedroom_daydiff">%d일째</string>
+    <string name="joinedroom_daydiff">공개 %d일 전</string>
     <string name="joinedroom_state_done">결과 발표 완료</string>
     <string name="joinedroom_state_matching">매칭 대기 중</string>
     <string name="joinedroom_santa_info_before_matching">나의 산타는 누구?</string>
