[UI/#183] 마니또 진행뷰 UI 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,9 +96,9 @@
 
     <string name="matching_text">산타 마니또 매칭중\n잠시만 기다려줘 :)</string>
 
-    <string name="matched_bottom_button">홈으로 가기</string>
-    <string name="matched_mission_title">미션은</string>
-    <string name="matched_manitto_title" formatted="false">%s 산타의 마니또는</string>
+    <string name="matched_bottom_button">마니또 하러 가기</string>
+    <string name="matched_mission_title" formatted="false">%s 산타가 수행할 미션</string>
+    <string name="matched_manitto_title" formatted="false">%s 산타의 마니또</string>
     <string name="matched_no_mission">미션이 없습니다</string>
     <string name="matched_bottom_button_delete">나의 산타 마니또에서 삭제하기</string>
 
